@@ -5,53 +5,45 @@ exec_prefix=@exec_prefix@
 
 usage()
 {
-	cat <<EOF
+    cat <<EOF
 Usage: confuse-config [OPTIONS]
 Options:
-	[--version]
-	[--cflags]
-	[--ldflags]
-	[--libs]
+    [--version]
+    [--cflags]
+    [--libs]
 EOF
-	exit $1
+    exit $1
 }
 
 if test $# -eq 0; then
-  usage 1 1>&2
+    usage 1 1>&2
 fi
 
 while test $# -gt 0; do
-  case $1 in
-    --version)
-      echo @VERSION@
-      ;;
-    --cflags)
-      echo_cflags="yes"
-      ;;
-    --ldflags)
-      echo_ldflags="yes"
-      ;;
-    --libs)
-      echo_libs="yes"
-      ;;
-    *)
-      usage 1 1>&2
-      ;;
-  esac
-  shift
+    case $1 in
+        --version)
+        echo "@VERSION@"
+        ;;
+        --cflags)
+        echo_cflags="yes"
+        ;;
+        --libs)
+        echo_libs="yes"
+        ;;
+        *)
+        usage 1 1>&2
+        ;;
+    esac
+    shift
 done
 
 if test "$echo_cflags" = "yes"; then
-  if test "@includedir@" != "/usr/include" ; then
-    includes="-I@includedir@"
-  fi
-  echo "$includes"
-fi
-
-if test "$echo_ldflags" = "yes"; then
-  echo "-L@libdir@"
+    if test "@includedir@" != "/usr/include" ; then
+        includes="-I@includedir@"
+    fi
+    echo "$includes"
 fi
 
 if test "$echo_libs" = "yes"; then
-  echo "-lconfuse @LIBS@"
+    echo "-L@libdir@ -lconfuse @LIBS@ @LTLIBINTL@"
 fi
